--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/parameter_expression
-	previous = 
-	base = 42d29cc
+	previous = 42d29cc
+	base = eb40168
 	trim = 
 	trimbase = 
