--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/parameter_expression
-	previous = 
-	base = 381d71c
+	previous = 381d71c
+	base = a14b6b4
 	trim = 
 	trimbase = 
