--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/parameter_expression
-	previous = 
-	base = 2428575
+	previous = 2428575
+	base = a3794eb
 	trim = 
 	trimbase = 
