--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/parameter_expression
-	previous = 
-	base = 0ac10c8
+	previous = 0ac10c8
+	base = 1c03f35
 	trim = 
 	trimbase = 
