--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/parameter_expression
-	previous = 
-	base = d8c05a9
+	previous = d8c05a9
+	base = 03cc6ab
 	trim = 
 	trimbase = 
