--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/parameter_expression
-	previous = 
-	base = 8107f36
+	previous = 8107f36
+	base = 755a582
 	trim = 
 	trimbase = 
